--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "cors-tunnel",
-  "version": "0.0.11",
+  "name": "dev-api-tunnel",
+  "version": "0.0.12",
   "description": "Http reverse proxy with CORS and cookie tunneling - localhost:3001 -> api.prod.domain.com",
   "source": "src/index.js",
   "main": "./dist/index.js",
   "bin": {
-    "cors-tunnel": "bin/cors-tunnel.js"
+    "cors-tunnel": "bin/dev-api-tunnel.js"
   },
   "engines": {
     "node": ">=10.14",
@@ -23,7 +23,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://salvoravida/cors-tunnel.git"
+    "url": "git+https://salvoravida/dev-api-tunnel.git"
   },
   "keywords": [
     "cors",
@@ -32,7 +32,7 @@
   "author": "Salvatore Ravidà",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/salvoravida/cors-tunnel/issues"
+    "url": "https://github.com/salvoravida/dev-api-tunnel/issues"
   },
-  "homepage": "https://github.com/salvoravida/cors-tunnel#readme"
+  "homepage": "https://github.com/salvoravida/dev-api-tunnel#readme"
 }
