--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "localhostify",
-  "version": "0.1.1",
+  "version": "0.2.0",
   "description": "Easy HTTP reverse proxy - localhost:3001 -> prod.domain.com",
   "source": "src/index.js",
   "main": "./dist/index.js",
@@ -14,8 +14,8 @@
   },
   "devDependencies": {
     "http-proxy": "^1.18.1",
-    "microbundle": "^0.14.0",
-    "prettier": "2.4.1"
+    "microbundle": "^0.15.0",
+    "prettier": "^2.6.2"
   },
   "scripts": {
     "build": "microbundle -i src/index.js -o dist/index.js --no-pkg-main -f cjs --no-sourcemap --compress",
